fix(v1): Pathway 0.29.x compatibility fixes
- simulate_factories.py: output clean Pythonic column headers (cod/bod/ph/tss)
  and write data/cetp/cetp_clean.csv via preprocess_cetp() so Pathway schemas
  can match headers without deprecated value_columns/column_names kwargs
- ingest.py: rewritten with exact-match CETPSchema/FactorySchema, no deprecated
  kwargs, reads cetp_clean.csv directly
- tripwire.py: removed non-existent pw.reducers.stddev; fixed windowby time expr
- backtrack.py: replaced asof_join (causes Rust key-missing panic with LEFT mode)
  with interval_join_left using timedelta Interval tolerance window
- constants.py: lowered COD_THRESHOLD from 250→200 mg/L (real data max=230.8,
  206 breach rows exist; 250 would never fire on this dataset)
- .env.example: updated threshold comment with real data stats

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,8 @@ ALERT_LOG_PATH=data/alerts/evidence_log.jsonl
 # Empirical COD baseline from priya_cetp_i.csv (Feb 2026)
 COD_BASELINE=193.0
 
-# NOTE: Set low (250) for demo. Raise to 450+ for production.
-COD_THRESHOLD=250.0
+# NOTE: Set to 200 for demo (real data max = 230.8 mg/L, 206 breach rows). Raise to 450+ for production.
+COD_THRESHOLD=200.0
 
 # ── Temporal backtracking ─────────────────────────────────────
 # NOTE: Fixed constant for v1 — will become dynamic in v2.
