--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,50 @@
-# Pathway
-pathway/
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
-# Data
-data/
-
-# Temporary
+# Environments
+.env
 .venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Streamlit
+.streamlit/
+!/.streamlit/config.toml
+
+# Test / Coverage
+.pytest_cache/
+.coverage
+htmlcov/
+.nox/
+.tox/
+
+# IDEs / Editors
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Pathway cache
+pathway/
 site/
 
-# IDE
-.idea
-.vscode
+# ShieldAI specific data and logs
+# Ignore generated factory data entirely
+data/factories/*
+!data/factories/.gitkeep
 
+# Ignore generated alert/tamper logs
+data/alerts/*
+!data/alerts/.gitkeep
 
-*/__pycache__
+# Ignore cleaned CETP CSV (generated from priya_cetp_i.csv)
+data/cetp/cetp_clean.csv
